--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "bootstrap": "^4.1.3",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
-    "jquery": "^3.3.1",
-    "nodemon": "^1.18.6",
-    "pg": "^7.6.1"
+    "body-parser": "1.18.3",
+    "bootstrap": "4.1.3",
+    "ejs": "2.6.1",
+    "express": "4.16.4",
+    "jquery": "3.3.1",
+    "nodemon": "1.18.6",
+    "pg": "7.6.1"
   }
 }
