--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert-node": "1.2.3",
     "body-parser": "1.18.3",
     "bootstrap": "4.1.3",
     "ejs": "2.6.1",
     "express": "4.16.4",
     "jquery": "3.3.1",
+    "js-alert": "1.0.4",
     "nodemon": "1.18.6",
     "pg": "7.6.1"
   }
